# servant-purescript

./: .gitignore  README.md  servant-purescript.cabal
examples/: bower.json  counter.hs
examples/counter/: bower.json  counter.hs
examples/counter/temp/: api.purs
examples/counter/www/: api.js  index.html
examples/temp/: api.purs
examples/todo/: App.purs  ToDo.hs  bower.json
examples/todo/App/: ToDoItem.purs
examples/todo/Data/List/: Utils.purs
examples/todo/src/: App.purs  Main.purs
examples/todo/src/App/: App.Ajax.purs  ToDoItem.purs
examples/todo/src/Data/List/: Utils.purs
examples/todo/test/Test/: Main.purs
examples/todo/www/: app.js  index.html  style.css
examples/www/: api.js  index.html
src/Servant/: PureScript.hs
test/: Spec.hs
