name:                servant-purescript
version:             0.0.0
synopsis:            Automatically derive purescript functions to query servant webservices
description:
  Automatically derive purescript functions to query servant webservices.
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           2015 Anchor
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Bug-reports:         http://github.com/anchor/servant-purescript/issues
source-repository head
  type: git
  location: http://github.com/anchor/servant-purescript.git

flag example
  description: Build the example too
  manual:      True
  default:     False

library
  exposed-modules:     Servant.PureScript
  build-depends:       base >=4.5 && <5
                     , lens >= 4
                     , servant >= 0.2.1
                     , servant-jquery
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable counter
  main-is: counter.hs
  ghc-options: -O2 -Wall
  hs-source-dirs: examples/counter
  
  if flag(example)
    buildable: True
  else
    buildable: False
  
  build-depends:
      aeson
    , base
    , filepath
    , Glob
    , process
    , purescript
    , servant >= 0.2.1
    , servant-server >= 0.2.1
    , servant-jquery >= 0.2.1
    , servant-purescript
    , stm
    , transformers
    , warp
  default-language: Haskell2010

executable todolist
  main-is: ToDo.hs
  ghc-options: -O2 -Wall
  hs-source-dirs: examples/todo
  
  if flag(example)
    buildable: True
  else
    buildable: False
  
  build-depends:
      aeson
    , base
    , containers
    , either
    , filepath
    , Glob
    , lens
    , mtl >= 2.2
    , process
    , purescript
    , servant
    , servant-server
    , servant-jquery
    , servant-purescript
    , stm
    , text
    , transformers
    , uuid
    , warp
  default-language: Haskell2010

test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  ghc-options:       -Wall
  main-is:           Spec.hs
  build-depends:
      base == 4.*
    , lens
    , servant-jquery
    , servant
    , servant-purescript
    , hspec >= 2.0
    , hspec-expectations
    , language-ecmascript == 0.16.*
    , parsec
    , process
    , purescript
  default-language: Haskell2010
